  Features:
    - [space-age] Made it possible to craft all items in Electromagnetic Plant.
    - ACU recipe [space-age] Edition.
    - Added crafting category = "electronics-or-handcrafting" using hands all assemblers, electromagnetic-plant.
    - Added options play with the old pre 0.17 durability system.
    - Setting to Show all items in Players crafting UI.
    - Better subgroup system.
  Changes:
    - [space-age] Electromagnetic Mech crafting. Can use Electromagnetic Plant to craft sarcophagus.
    - [space-age] Recipes have been made for: Battery, Fission, Laser, Roboport, Shield, Solar, Exoskeleton.
    - [space-age] Recipes are now using new crafting category from MK1-5 and 6-10 requires assembly 2 or electromagnetic-plant.
    - Achievement text make more sense.
    - Start of base game towards PAR will now have crafting triggers over science research.
  Bugfixes:
    - Temp fix for compatibility recipes.
    - Crash with AAI industries.
    - Bobs tech name crash.
    - Tech with creatable unlocks in bobs was using the vanilla circuit not bobs basic can be a soft-lock.
    - Bobs tech soft lock bob-carbon. in combination with Alt_Chemical_Processing.
    - Fixed many spelling errors across the Changelog.
    - Recipe issues from 1.1 (mod version 0.2.xx)
    - Added Nanobots Refined to the compatibility. Made the old ones incompatible.
  Info:
    - Note that this version are not fully finished & beta versions are available at my discord server.
    - Your are welcome to try it and give feedback on what's there. I don't want reports about uncompleted Features. (Example: thee settings are missing)
    - this INFO will be mark over when the official 0.4 is done.
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 12.03.2025
  Features:
    - Repeatable migrations.
  Changes:
    - Moved disable function: Filter, Recipe, Tech. To Chemical mod.
    - Removed Redundant settings.