@@ -45,6 +45,7 @@
 		"? Power Armor MK3 >= 2.1.03",
 		"(?) pypostprocessing >= 0.2.23",
 		"(?) RampantArsenal >= 1.1.6",
+		"? RampantArsenalFork >= 1.0.3",
 		"(?) space-spidertron",
 		"(?) SpaceModFeorasFork >= 1.3.0",
 		"(?) spidertron-extended >= 0.3.15",
