@@ -23,6 +23,7 @@ Date: 06.06.2025
     - Added options play with the old pre 0.17 durability system.
     - Setting to Show all items in Players crafting UI.
     - Better subgroup system.
+    - Newer updated https://mods.factorio.com/mod/RampantArsenalFork
   Changes:
     - [space-age] Electromagnetic Mech crafting. Can use Electromagnetic Plant to craft sarcophagus.
     - [space-age] Recipes have been made for: Battery, Fission, Laser, Roboport, Shield, Solar, Exoskeleton.
